# github.alfredworkflow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: cache.rs  detach.rs  emojis.rs  github.rs  logger.rs  main.rs
src/cache/: detach.rs  logger.rs  mod.rs  mutex.rs
src/detach/: logger.rs
workflow/: info.plist
