[package]
name = "github-alfred-workflow"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
fs2 = "0.4.3"
isahc = { version = "1.4.0", features = ["json"] }
itertools = "0.10.0"
libc = "0.2.94"
log = { version = "0.4.14", features = ["std"] }
once_cell = "1.7.2"
powerpack = "0.1.2"
regex-macro = "0.1.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
