[package]
name = "github-alfred-workflow"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
curl = "0.4.43"
fmutex = "0.1.0"
home = "0.5.3"
log = { version = "0.4.14", features = ["std"] }
once_cell = "1.10.0"
powerpack = { version = "0.4.1", features = ["detach"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha1 = "0.10.1"
