[package]
name = "github-alfred-workflow"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
curl = "0.4.44"
fmutex = "0.1.0"
home = "0.5.4"
log = { version = "0.4.17", features = ["std"] }
once_cell = "1.17.1"
powerpack = { version = "0.4.2", features = ["detach"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
sha1 = "0.10.5"
